syntax = "proto3";

enum Priority {
    URGENT = 0;
    HIGH = 1;
    MEDIUM = 2;
    LOW = 3;
}

enum Status {
    DONE = 0;
    IN_PROGRESS = 1;
    TO_DO = 2;
}

message Task {
    string name = 1;
    string description = 2;
    Priority priority = 3;
    Status status = 4;
    repeated Todo task = 5;
    Timestamp start_date = 6;
    Timestamp end_date = 7;
}
